# keylime-webtool-backend

./: CLAUDE.md  Cargo.toml  PENDING.md  README.md
.cargo/: audit.toml
.github/workflows/: curl-integration.yaml  mockoon.yaml  shellcheck.yml
src/: config.rs  error.rs  lib.rs  main.rs  settings_store.rs  state.rs
src/api/: middleware.rs  mod.rs  response.rs  routes.rs  ws.rs
src/api/handlers/: agents.rs  alerts.rs  attestations.rs  audit.rs  auth.rs  certificates.rs  compliance.rs  integrations.rs  kpis.rs  mod.rs  performance.rs  policies.rs  settings.rs
src/audit/: logger.rs
src/auth/: jwt.rs  mod.rs  oidc.rs  rbac.rs  session.rs
src/keylime/: client.rs  models.rs
src/models/: agent.rs  alert.rs  alert_store.rs  attestation.rs  certificate.rs  kpi.rs  mod.rs  policy.rs
src/storage/: cache.rs  db.rs
test-data/: registrar.json  verifier.json
tests/: curl_integration_test.sh  mockoon_integration.rs  mockoon_tests.sh
